--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
+    "react-spinners": "^0.17.0",
     "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
